--- a/2.1-databases/work_with_database/requirements.txt
+++ b/2.1-databases/work_with_database/requirements.txt
@@ -1,2 +1,13 @@
-django
+django~=4.2.1
 psycopg2-binary
+
+Pillow~=9.5.0
+pip~=21.3.1
+wheel~=0.37.1
+asgiref~=3.7.2
+sqlparse~=0.4.4
+setuptools~=60.2.0
+requests~=2.31.0
+certifi~=2023.5.7
+idna~=3.4
+urllib3~=2.0.2
