--- a/3.4-django-testing/django_testing/requirements.txt
+++ b/3.4-django-testing/django_testing/requirements.txt
@@ -1,4 +1,5 @@
-django
-djangorestframework
-django-filter
+django~=4.2.3
+djangorestframework~=3.14.0
+django-filter~=23.2
 psycopg2-binary
+python-dotenv
