--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,9 @@ jobs:
           python-version: '3.10'
 
       - name: Установка зависимостей
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          pip install flake8
 
       - name: Линтинг
         run: flake8 logistic/ --exclude=logistic/migrations/
