--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,13 +64,13 @@ jobs:
             DB_PASSWORD: ${{ env.DB_PASSWORD }}
             DB_HOST: ${{ env.DB_HOST }}
             DB_PORT: ${{ env.DB_PORT }}
-            
+
       - name: Decode SSH key
         run: |
           echo "$SSH_KEY_BASE64" | base64 -d > /tmp/ssh_key
           chmod 600 /tmp/ssh_key
         env:
-          SSH_KEY_BASE64: ${{ secrets.SSH_KEY }}
+          SSH_KEY_BASE64: ${{ secrets.SSH_KEY_BASE64 }}
 
       - name: Деплой
         uses: appleboy/ssh-action@master
