--- a/3.2-crud/Dockerfile
+++ b/3.2-crud/Dockerfile
@@ -2,12 +2,11 @@ FROM python:3.9
 
 WORKDIR /app
 
-COPY . .
+COPY stocks_products/requirements.txt /stocks_products/
+RUN pip install -r /stocks_products/requirements.txt
 
-WORKDIR /app/stocks_products
-
-RUN pip install -r requirements.txt
+COPY . /app/
 
 EXPOSE 8000
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["gunicorn", "--chdir", "stocks_products", "--bind", "0.0.0.0:8000", "stocks_products.wsgi:application"]
